# wabain.github.io

./: .deploy-release.sh  .eslintignore  .eslintrc.bundled.js  .eslintrc.js  .ghpages-gitignore  .gitignore  .jekyll-metadata  .prettierignore  .prettierrc  .scss-lint.yml  .site-meta.json  .test-meta.json  .travis.yml  Gemfile  Gruntfile.js  Vagrantfile  _config.yml  about.html  babel.config.js  blog.html  bower.json  contact.html  cv.html  deploy.sh  feed.xml  index.html  install-build-deps.sh  jest.config.js  karma.conf.js  npm-shrinkwrap.json  package.json  pnpm-lock.yaml  postcss.config.js  projects.html  provision.sh  pyproject.toml  redirects.json  robots.txt  runtime-deps.json  sitemap.xml  (+6 more)
.github/: dependabot.yml
.github/workflows/: after-pr-build.yml  after-pr-meta-action.yml  after-queue-update.yml  base.yml  build-test.yml  check-merge-deploy.yml  codeql-analysis.yml  merge-deploy.yml  poll-mergeable-pr.yml  validate.yml  (+2 more)
_includes/: navbar.html
_layouts/: page.html
ci/: env.sh  release-name.jq
content/: .site-meta.json  .test-meta.json  _config.yml  blog.html  contact.html  index.html  posts.html  projects.html
home-assets/: cs-homepage.js  cs-homepage.min.css  cs-homepage.min.css.map  cs-homepage.min.js  cs-homepage.min.js.map
integration-tests/: env.js  env.ts  integration-environment.js  main.js  navigation.test.js  navigation.test.ts  tsconfig.json
section-partial/: .site-meta.json  .test-meta.json  blog.html  contact.html  index.html  projects.html  redirects.json
sections/: about.html  cv.html  jqscript.html  projects.html
src/: index.html
tailwind-plugins/: spaced-descendants.js
tests/: integration.js  main.js
webpack/: common-env.js  svgo-loader.js
(+206 files in other folders)
