[tool.poetry]
name = "wabain-github-io-support"
version = "0.1.0"
description = "Python supporting code for this project"
authors = ["William Bain <bain.william.a@gmail.com>"]
readme = "README.md"
packages = [{ include = "ci/integration_tools" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^24.3.0"

[tool.black]
line-length = 100
target-version = ['py310']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
