[tool.poetry]
name = "wabain-github-io-support"
version = "0.1.0"
description = "Python supporting code for this project"
authors = ["William Bain <bain.william.a@gmail.com>"]
packages = [{ include = "ci/integration_tools" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
black = "^24.8.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
